tests/a/tests/integrity/fail/closure/closure.3.stderr
error: expected {bin}{bin}, found {bin}{b,bin,c}
 --> tests/integrity/fail/closure/closure.3.rs:7:26
  |
7 |         |x: i32, y: i32| x
  |                          ^
